# Curso-Rust

./: .gitignore  Cargo.toml  README.md  create_structure.sh
curso_rust/: Cargo.toml  README.md  main.rs
curso_rust/capitulo_1/: Cargo.toml  README.md
curso_rust/capitulo_1/src/: main.rs
curso_rust/capitulo_10/: Cargo.toml  README.md
curso_rust/capitulo_10/src/: main.rs
curso_rust/capitulo_11/: Cargo.toml  README.md
curso_rust/capitulo_11/src/: main.rs
curso_rust/capitulo_12/: Cargo.toml  README.md
curso_rust/capitulo_12/src/: main.rs
curso_rust/capitulo_13/: Cargo.toml  README.md
curso_rust/capitulo_13/src/: main.rs
curso_rust/capitulo_14/: Cargo.toml  README.md
curso_rust/capitulo_14/src/: main.rs
curso_rust/capitulo_15/: Cargo.toml  README.md
curso_rust/capitulo_15/src/: main.rs
curso_rust/capitulo_16/: Cargo.toml  README.md
curso_rust/capitulo_16/src/: main.rs
curso_rust/capitulo_17/: Cargo.toml  README.md
curso_rust/capitulo_17/src/: main.rs
curso_rust/capitulo_18/: Cargo.toml  README.md
curso_rust/capitulo_18/src/: main.rs
curso_rust/capitulo_19/: Cargo.toml  README.md
curso_rust/capitulo_2/: Cargo.toml  README.md
curso_rust/capitulo_20/: Cargo.toml  README.md
curso_rust/capitulo_3/: Cargo.toml  README.md
curso_rust/capitulo_4/: Cargo.toml  README.md
curso_rust/capitulo_5/: Cargo.toml  README.md
curso_rust/capitulo_6/: Cargo.toml  README.md
curso_rust/capitulo_7/: Cargo.toml  README.md
curso_rust/capitulo_8/: Cargo.toml  README.md
curso_rust/capitulo_9/: Cargo.toml  README.md
(+10 files in other folders)
